[package]
name = "rust_SDK_1_1M"
version = "0.1.0"
authors = ["Mike", "Roma", "Leo", "Sveta"]
edition = "2021"

# Зависимости для разработки под процессор Cortex-M3
[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "0.1.2"
embedded-hal = "0.2.3"

# Пакет для разработки под отладочные платы stm32f1
[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["stm32f100", "rt"]

# Позволяет использовать `cargo fix`!
[[bin]]
name = "wrapper"
path = "src/aggregator.rs"
test = false
bench = false

# Включение оптимизации кода
[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация